fixed gap at top of navbar(top: 0)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,10 @@ nav {
   border-bottom: 1px solid seashell;
   text-align: initial;
   position: fixed;
+  top: 0px;
   height: 69px;
   width: 100%;
+  display: block;
 }
 
 nav img {
